--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUsersCreatedComments.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUsersCreatedComments.cshtml
@@ -6,6 +6,10 @@
 @model Web.MVC.Models.ViewModels.UserViewModels.GetCommentsViewModel
 <link rel="stylesheet" href="~/css/user/dropdown.css" />
 <link rel="stylesheet" href="~/css/user/navbar.css" />
+<link rel="stylesheet" href="~/css/discussion/DiscussionsPreview.css" />
+<link rel="stylesheet" href="~/css/discussion/discussionsList.css" />
+<link rel="stylesheet" href="~/css/NextPreviousPaginationBtns.css" />
+<link rel="stylesheet" href="~/css/user/CreatedDiscussions.css" />
 
 <div class="profile-navbar">
     <a class="profile-navbar-link" asp-controller="User" asp-action="GetUser" asp-route-userName="@ViewBag.UserName">профиль</a>
@@ -66,30 +70,47 @@
     }
     else
     {
-        <h3>Созданные комментарии</h3>
         foreach (var comment in Model.Comments)
         {
-            <a asp-controller="Discussion" asp-action="GetDiscussion" asp-route-id="@comment.DiscussionId" asp-route-pageNumber="1" asp-route-pageSize="20">
-                @comment.Content
-            </a>
-            <p>Создано: @comment.CreatedDate</p>
+            <div class="border-div">
+                <a class="discussion-title" asp-controller="Discussion" asp-action="GetDiscussion" asp-route-id="@comment.DiscussionId"
+                   asp-route-pageNumber="1"asp-route-pageSize="20">@comment.Content
+                </a>
+                <p>Создано: @comment.CreatedDate</p>
+            </div>
         }
     }
 </div>
 
-@if (Model.PreviousPageNumber != 0)
-{
-    <a asp-controller="User" asp-action="GetUsersCreatedComments" asp-route-pageNumber="@Model.PreviousPageNumber" asp-route-pageSize="@Model.PageSize"
-       asp-route-userName="@ViewBag.UserName">
-        Назад
-    </a>
-}
-@if (Model.DoesNextPageExist && Model.Comments.Count != 0)
-{
-    <a asp-controller="User" asp-action="GetUsersCreatedComments" asp-route-pageNumber="@Model.NextPageNumber" asp-route-pageSize="@Model.PageSize"
-       asp-route-userName="@ViewBag.UserName">
-        Вперед
-    </a>
-}
+<div class="pagination-link-container">
+    @if (Model.Comments.Count != 0)
+    {
+        if (Model.PreviousPageNumber != 0)
+        {
+            <a class="pagination-link-previous" asp-controller="User" asp-action="GetUsersCreatedComments" asp-route-pageNumber="@Model.PreviousPageNumber"
+               asp-route-pageSize="@Model.PageSize"asp-route-userName="@ViewBag.UserName">
+                Назад
+            </a>
+        }
+        else
+        {
+            <a class="pagination-link-previous-doesnt-exist">Назад</a>
+        }
+    }
+    @if (Model.Comments.Count != 0)
+    {
+        if (Model.DoesNextPageExist)
+        {
+            <a class="pagination-link-next" asp-controller="User" asp-action="GetUsersCreatedComments" asp-route-pageNumber="@Model.NextPageNumber"
+               asp-route-pageSize="@Model.PageSize"asp-route-userName="@ViewBag.UserName">
+                Вперед
+            </a>
+        }
+        else
+        {
+            <a class="pagination-link-next-doesnt-exist">Вперед</a>
+        }
+    }
+</div>
 <script src="~/js/user/dropdownUserAdmin.js"></script>
 <script src="~/js/user/dropdownUserSuggestions.js"></script>
