--- a/src/Web/Web.MVC/Web.MVC/Views/Bookmark/GetBookmarksByAntiquity.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Bookmark/GetBookmarksByAntiquity.cshtml
@@ -73,7 +73,7 @@
                     <input type="hidden" name="pageSize" value="@Model.PageSize" />
                     <input type="hidden" name="pageNumber" value="1" />
                     <input type="hidden" name="userName" value="@Model.UserName" />
-                    <input class="search-submit" type="submit" value="найти" />
+                    <input class="search-submit" type="submit" value="Найти" />
                 </form>
             </div>
             <div class="bookmarks-sorting-switching-container">
