--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetSuggestedDiscussionsByUserName.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetSuggestedDiscussionsByUserName.cshtml
@@ -7,116 +7,118 @@
 <link rel="stylesheet" href="~/css/user/dropdown.css" />
 <link rel="stylesheet" href="~/css/user/navbar.css" />
 <link rel="stylesheet" href="~/css/NextPreviousPaginationBtns.css"/>
+<link rel="stylesheet" href="~/css/moderator/GetSuggestedDiscussions.css"/>
 
-<div class="profile-navbar">
-    <a class="profile-navbar-link" asp-controller="User" asp-action="GetUser" asp-route-userName="@Model.SuggestedByUserName">профиль</a>
-    <a class="profile-navbar-link" asp-controller="User" asp-action="GetUsersCreatedDiscussions" asp-route-userName="@Model.SuggestedByUserName"
-       asp-route-pageNumber="1" asp-route-pageSize="20">обсуждения</a>
-    <a class="profile-navbar-link" asp-controller="User" asp-action="GetUsersCreatedComments" asp-route-pageNumber="1" asp-route-pageSize="20"
-       asp-route-userName="@Model.SuggestedByUserName">комментарии</a>
-    @if (User.Identity.Name == Model.SuggestedByUserName || User.IsInRole(UserRoleConstants.AdminRole) || User.IsInRole(UserRoleConstants.ModeratorRole))
-    {
-        <a class="profile-navbar-link" asp-controller="Bookmark" asp-action="GetBookmarksByNovelty" asp-route-pageNumber="1" asp-route-pageSize="20"
-           asp-route-userName="@Model.SuggestedByUserName">
-            закладки
-        </a>
-    }
-    <div class="dropdown">
-        @if (User.Identity.Name == Model.SuggestedByUserName)
+<div class="suggested-discussions-page-container">
+    <div class="profile-navbar">
+        <a class="profile-navbar-link" asp-controller="User" asp-action="GetUser" asp-route-userName="@Model.SuggestedByUserName">профиль</a>
+        <a class="profile-navbar-link" asp-controller="User" asp-action="GetUsersCreatedDiscussions" asp-route-userName="@Model.SuggestedByUserName"
+           asp-route-pageNumber="1" asp-route-pageSize="20">обсуждения</a>
+        <a class="profile-navbar-link" asp-controller="User" asp-action="GetUsersCreatedComments" asp-route-pageNumber="1" asp-route-pageSize="20"
+           asp-route-userName="@Model.SuggestedByUserName">комментарии</a>
+        @if (User.Identity.Name == Model.SuggestedByUserName || User.IsInRole(UserRoleConstants.AdminRole) || User.IsInRole(UserRoleConstants.ModeratorRole))
         {
-            @if (!User.IsInRole(UserRoleConstants.AdminRole) && !User.IsInRole(UserRoleConstants.ModeratorRole))
+            <a class="profile-navbar-link" asp-controller="Bookmark" asp-action="GetBookmarksByNovelty" asp-route-pageNumber="1" asp-route-pageSize="20"
+               asp-route-userName="@Model.SuggestedByUserName">
+                закладки
+            </a>
+        }
+        <div class="dropdown">
+            @if (User.Identity.Name == Model.SuggestedByUserName)
+            {
+                @if (!User.IsInRole(UserRoleConstants.AdminRole) && !User.IsInRole(UserRoleConstants.ModeratorRole))
+                {
+                    <div>
+                        <button id="dropdownSuggestionsButton" class="open-dropdown-btn">предложения &#x25BC;</button>
+                        <div id="dropdownSuggestionsList" class="dropdown-list">
+                            <a class="dropdown-content" asp-controller="User" asp-action="GetUsersSuggestedComments" asp-route-pageNumber="1"
+                               asp-route-pageSize="20" asp-route-userName="@Model.SuggestedByUserName">комментарии</a>
+                            <a class="dropdown-content" asp-controller="User" asp-action="GetUsersSuggestedDiscussions" asp-route-userName="@Model.SuggestedByUserName"
+                               asp-route-pageNumber="1" asp-route-pageSize="20">обсуждения</a>
+                            <a class="dropdown-content" asp-controller="User" asp-action="GetUsersSuggestedTopics" asp-route-pageNumber="1"
+                               asp-route-pageSize="20" asp-route-userName="@Model.SuggestedByUserName">темы</a>
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+        <div class="dropdown">
+            @if (User.IsInRole(UserRoleConstants.AdminRole) || User.IsInRole(UserRoleConstants.ModeratorRole))
             {
                 <div>
-                    <button id="dropdownSuggestionsButton" class="open-dropdown-btn">предложения &#x25BC;</button>
-                    <div id="dropdownSuggestionsList" class="dropdown-list">
-                        <a class="dropdown-content" asp-controller="User" asp-action="GetUsersSuggestedComments" asp-route-pageNumber="1"
-                           asp-route-pageSize="20" asp-route-userName="@Model.SuggestedByUserName">комментарии</a>
-                        <a class="dropdown-content" asp-controller="User" asp-action="GetUsersSuggestedDiscussions" asp-route-userName="@Model.SuggestedByUserName"
-                           asp-route-pageNumber="1" asp-route-pageSize="20">обсуждения</a>
-                        <a class="dropdown-content" asp-controller="User" asp-action="GetUsersSuggestedTopics" asp-route-pageNumber="1"
-                           asp-route-pageSize="20" asp-route-userName="@Model.SuggestedByUserName">темы</a>
+                    <button id="dropdownAdminButton" class="open-dropdown-btn active-navbar-link">админ &#x25BC;</button>
+                    <div id="dropdownAdminList" class="dropdown-list">
+                        <a class="dropdown-content" asp-controller="Moderator" asp-action="GetSuggestedTopicsByUserName" asp-route-pageNumber="1"
+                           asp-route-pageSize="20" asp-route-userName="@Model.SuggestedByUserName">предложенные темы</a>
+                        <a class="dropdown-content active-dropdown-content" asp-controller="Moderator" asp-action="GetSuggestedDiscussionsByUserName"
+                           asp-route-userName="@Model.SuggestedByUserName" asp-route-pageNumber="1" asp-route-pageSize="20">предложенные обсуждения</a>
+                        <a class="dropdown-content" asp-controller="Moderator" asp-action="GetSuggestedCommentsByUserName" asp-route-pageNumber="1"
+                           asp-route-pageSize="20" asp-route-userName="@Model.SuggestedByUserName">предложенные комментарии</a>
+                        <a class="dropdown-content" asp-controller="Moderator" asp-action="GetReportsByUserName" asp-route-pageNumber="1"
+                           asp-route-pageSize="20" asp-route-userName="@Model.SuggestedByUserName">жалобы</a>
                     </div>
                 </div>
             }
-        }
+        </div>
     </div>
-    <div class="dropdown">
-        @if (User.IsInRole(UserRoleConstants.AdminRole) || User.IsInRole(UserRoleConstants.ModeratorRole))
+
+    <div>
+        @if (Model.SuggestedDiscussions.Count != 0)
         {
-            <div>
-                <button id="dropdownAdminButton" class="open-dropdown-btn active-navbar-link">админ &#x25BC;</button>
-                <div id="dropdownAdminList" class="dropdown-list">
-                    <a class="dropdown-content" asp-controller="Moderator" asp-action="GetSuggestedTopicsByUserName" asp-route-pageNumber="1"
-                       asp-route-pageSize="20" asp-route-userName="@Model.SuggestedByUserName">предложенные темы</a>
-                    <a class="dropdown-content active-dropdown-content" asp-controller="Moderator" asp-action="GetSuggestedDiscussionsByUserName"
-                       asp-route-userName="@Model.SuggestedByUserName" asp-route-pageNumber="1" asp-route-pageSize="20">предложенные обсуждения</a>
-                    <a class="dropdown-content" asp-controller="Moderator" asp-action="GetSuggestedCommentsByUserName" asp-route-pageNumber="1"
-                       asp-route-pageSize="20" asp-route-userName="@Model.SuggestedByUserName">предложенные комментарии</a>
-                    <a class="dropdown-content" asp-controller="Moderator" asp-action="GetReportsByUserName" asp-route-pageNumber="1"
-                       asp-route-pageSize="20" asp-route-userName="@Model.SuggestedByUserName">жалобы</a>
-                </div>
+            string returnUrl;
+            if (Context.Request.QueryString.HasValue)
+            {
+                returnUrl = Context.Request.Path + Context.Request.QueryString;
+            }
+            else
+            {
+                returnUrl = Context.Request.Path;
+            }
+            <form method="post" asp-controller="Moderator" asp-action="DeleteAllSuggestedDiscussionsByUserName" asp-route-userName="@Model.SuggestedByUserName"
+                  asp-route-returnUrl="@returnUrl">
+                <input class="delete-all-suggested-discussions-input" type="submit" value="Удалить все предложенные обсуждения" onclick="if (confirm('Вы действительно хотите удалить ВСЕ предложенные пользователем обсуждения?')){return true;}else{event.stopPropagation(); event.preventDefault();};" />
+            </form>
+        }
+        @foreach (var suggestedDiscussion in Model.SuggestedDiscussions)
+        {
+            <div class="suggestion-container">
+                <p class="highlited-discussion-name">
+                    <a href="~/SuggestedDiscussions/@suggestedDiscussion.Id?returnUrl=@HttpUtility.UrlEncode(Context.Request.Path + Context.Request.QueryString)">@suggestedDiscussion.Title</a>
+                </p>
             </div>
         }
     </div>
-</div>
 
-<div class="text-center">
-    <h3>Предложенные обсуждения</h3>
-    @if (Model.SuggestedDiscussions.Count != 0)
-    {
-        string returnUrl;
-        if (Context.Request.QueryString.HasValue)
+    <div class="pagination-link-container">
+        @if (Model.SuggestedDiscussions.Count != 0)
         {
-            returnUrl = Context.Request.Path + Context.Request.QueryString;
+            @if (Model.PreviousPageNumber != 0)
+            {
+                <a class="pagination-link-previous" asp-controller="Moderator" asp-action="GetSuggestedDiscussionsByUserName"
+                   asp-route-pageNumber="@Model.PreviousPageNumber" asp-route-pageSize="@Model.PageSize" asp-route-userName="@Model.SuggestedByUserName">
+                    Назад
+                </a>
+            }
+            else
+            {
+                <a class="pagination-link-previous-doesnt-exist">Назад</a>
+            }
         }
-        else
+        @if (Model.SuggestedDiscussions.Count != 0)
         {
-            returnUrl = Context.Request.Path;
+            if (Model.DoesNextPageExist)
+            {
+                <a class="pagination-link-next" asp-controller="Moderator" asp-action="GetSuggestedDiscussionsByUserName"
+                   asp-route-pageNumber="@Model.NextPageNumber" asp-route-pageSize="@Model.PageSize" asp-route-userName="@Model.SuggestedByUserName">
+                    Вперед
+                </a>
+            }
+            else
+            {
+                <a class="pagination-link-next-doesnt-exist">Вперед</a>
+            }
         }
-        <form method="post" asp-controller="Moderator" asp-action="DeleteAllSuggestedDiscussionsByUserName" asp-route-userName="@Model.SuggestedByUserName"
-              asp-route-returnUrl="@returnUrl">
-            <input type="submit" value="удалить все предложенные обсуждения"/>
-        </form>
-        <a asp-controller="Moderator" asp-action="BanUser" asp-route-returnUrl="@returnUrl" asp-route-userName="@Model.SuggestedByUserName">
-            отстранить пользователя
-        </a><br/>
-    }
-    @foreach (var suggestedDiscussion in Model.SuggestedDiscussions)
-    {
-        <a href="~/SuggestedDiscussions/@suggestedDiscussion.Id?returnUrl=@HttpUtility.UrlEncode(Context.Request.Path + Context.Request.QueryString)">@suggestedDiscussion.Title</a>
-        <br/>
-    }
-</div>
-
-<div class="pagination-link-container">
-    @if (Model.SuggestedDiscussions.Count != 0)
-    {
-        @if (Model.PreviousPageNumber != 0)
-        {
-            <a class="pagination-link-previous" asp-controller="Moderator" asp-action="GetSuggestedDiscussionsByUserName"
-               asp-route-pageNumber="@Model.PreviousPageNumber"asp-route-pageSize="@Model.PageSize" asp-route-userName="@Model.SuggestedByUserName">
-                Назад
-            </a>
-        }
-        else
-        {
-            <a class="pagination-link-previous-doesnt-exist">Назад</a>
-        }
-    }
-    @if (Model.SuggestedDiscussions.Count != 0)
-    {
-        if (Model.DoesNextPageExist)
-        {
-            <a class="pagination-link-next" asp-controller="Moderator" asp-action="GetSuggestedDiscussionsByUserName"
-               asp-route-pageNumber="@Model.NextPageNumber"asp-route-pageSize="@Model.PageSize" asp-route-userName="@Model.SuggestedByUserName">
-                Вперед
-            </a>
-        }
-        else
-        {
-            <a class="pagination-link-next-doesnt-exist">Вперед</a>
-        }
-    }
+    </div>
 </div>
 <script src="~/js/user/dropdownUserAdmin.js"></script>
 <script src="~/js/user/dropdownUserSuggestions.js"></script>
